--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -10,17 +10,17 @@
 <body>
     <h3>Create a new listing</h3>
     <form method="POST" action="/listings">
-        <input name="title" placeholder="enter title " type="text">
+        <input name="listing[title]" placeholder="enter title " type="text">
         <br> <br>
-        <textarea name="description" placeholder="enter description" type="text"></textarea>
+        <textarea name="listing[description]" placeholder="enter description" type="text"></textarea>
         <br> <br>
-        <input name="image" placeholder="enter URL/link" type="url"> 
+        <input name="listing[image]" placeholder="enter URL/link" type="url"> 
         <br><br>
-        <input name="price" placeholder="enter price" type="number"> 
+        <input name="listing[price]" placeholder="enter price" type="number"> 
         <br><br>
-        <input name="location" placeholder="enter location" type="text"> 
+        <input name="listing[location]" placeholder="enter location" type="text"> 
         <br><br>
-        <input name="country" placeholder="enter country" type="text">
+        <input name="listing[country]" placeholder="enter country" type="text">
         <br><br>
         <button>Add</button>
     </form>
