--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wanderlust</title>
-</head>
-
-<body>
+<% layout("/layouts/boilerplate") -%>
+<b
     <h3>All Listings</h3>
 
     <form method="GET" action="/listings/new">
@@ -19,10 +11,11 @@
 
             <li> <a href="/listings/<%= listing._id %>">
                     <%= listing.title %>
-                </a> </li>
+                </a>
+            </li>
 
             <% } %>
+            <br>
     </ul>
 </body>
 
-</html>
