--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout("/layouts/boilerplate") -%>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wanderlust</title>
-</head>
 
 <body>
     <h3>Create a new listing</h3>
@@ -25,4 +19,3 @@
         <button>Add</button>
     </form>
 </body>
-</html>
