--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wanderlust</title>
-    
-</head>
+<%layout("/layouts/boilerplate")%>
 <body>
     <h3>Listing details: </h3>
     <ul>
@@ -13,8 +6,12 @@
         <li><%= listing.description %></li>
         <li>&#8377 <%= listing.price.toLocaleString("en-IN") %></li>
         <li><%= listing.location %></li>
-        <li><%= listing.country %></li>
-
+        <li><%= listing.country %></li> <br>
     </ul>
+    <br>
+    <a href="/listings/<%= listing._id %>/edit">Edit listing</a> <br>
+    <br> <br>
+    <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+        <button>Delete listing</button>
+    </form>
 </body>
-</html>
