--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,8 +1,12 @@
 <footer>
     <div class="f-info">
-        <div class="f-info-socials"></div>
-        <div>
-            Wanderlust Private Limited © 2023. All rights reserved.
+        <div class="f-info-socials">
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-square-instagram"></i>
+            <i class="fa-brands fa-linkedin"></i>
+        </div>
+        <div class="f-info-brand">
+            &copy; Wanderlust Private Limited © 2023. All rights reserved.
         </div>
         <div class="f-info-links">
             <a href="/privacy">Privacy</a>
