addeed click to view individual listing and hover effect to the cards

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,21 +1,43 @@
 <% layout("/layouts/boilerplate") -%>
-<b
-    <h3>All Listings</h3>
+    <h2>All Listings</h2>
 
-    <form method="GET" action="/listings/new">
-        <button>Create New Listing</button>
-    </form>
+    <!-- <form method="GET" action="/listings/new">
+            <button>Create New Listing</button>
+        </form> -->
 
-    <ul>
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <% for(let listing of allListings){ %>
-
-            <li> <a href="/listings/<%= listing._id %>">
-                    <%= listing.title %>
+            <div class="col">
+                <a href="/listings/<%= listing._id %>" class="listing-link">
+                    <div class="card">
+                        <img src=" <%= listing.image %> " class="card-img-top" style="height: 20rem" alt="...">
+                        <div class="card-img-overlay"></div>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <%= listing.title %>
+                            </h5>
+                            <p class="card-text">
+                                &#8377; <%= listing.price %>/night
+                            </p>
+                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                        </div>
+                    </div>
                 </a>
-            </li>
+            </div>
 
             <% } %>
-            <br>
-    </ul>
-</body>
+    </div>
 
+
+
+    <!-- <ul>
+            <% for(let listing of allListings){ %>
+
+                <li> <a href="/listings/<%= listing._id %>">
+                        <%= listing.title %>
+                    </a></li>
+
+                <% } %>
+                    <br>
+        </ul> -->
+    </body>
