--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,21 +1,65 @@
 <% layout("/layouts/boilerplate") -%>
 
+<div class="row">
+    <div class="col-8 offset-2">
+        <br>
+    <h3>Create a new listing</h3> <br>
+        <form method="POST" action="/listings">
 
-<body>
-    <h3>Create a new listing</h3>
-    <form method="POST" action="/listings">
-        <input name="listing[title]" placeholder="enter title " type="text">
-        <br> <br>
-        <textarea name="listing[description]" placeholder="enter description" type="text"></textarea>
-        <br> <br>
-        <input name="listing[image]" placeholder="enter URL/link" type="url"> 
-        <br><br>
-        <input name="listing[price]" placeholder="enter price" type="number"> 
-        <br><br>
-        <input name="listing[location]" placeholder="enter location" type="text"> 
-        <br><br>
-        <input name="listing[country]" placeholder="enter country" type="text">
-        <br><br>
-        <button>Add</button>
-    </form>
-</body>
+            <div class="mb-3">
+                <label for="title" class="form-label">Title</label>
+                <input name="listing[title]" 
+                        placeholder="enter title " 
+                        type="text"
+                        class="form-control"
+                >
+            </div>
+            
+            <div class="mb-3">
+                <label for="description" class="form-label">Description</label>
+                <textarea name="listing[description]" 
+                    placeholder="enter description" 
+                    type="text"
+                    class="form-control"
+                ></textarea>
+            </div>
+            <div class="mb-3">
+                <label for="image" class="form-label">Image URL</label>
+                <input name="listing[image]" 
+                    placeholder="enter URL/link" 
+                    type="url" 
+                    class="form-control">
+            </div>
+
+            <div class="row">
+                <div class="mb-3 col-md-4">
+                    <label for="price">Price</label>
+                    <input name="listing[price]" 
+                    placeholder="enter price" 
+                    type="number"
+                    class="form-control">
+                </div>
+                <div class="mb-3 col-md-8">
+                    <label for="location" class="form-label">Location</label>
+                    <input name="listing[location]" 
+                        placeholder="enter location" 
+                        type="text"
+                        class="form-control">
+                </div>
+            </div>
+
+            
+            <div class="mb-3">
+                <label for="country" class="form-label">Country</label>
+                <input name="listing[country]" 
+                placeholder="enter country" 
+                type="text"
+                class="form-control">
+
+            </div>
+            <br><br>
+            <button class="btn btn-dark add-btn">Add</button>
+            <br><br>
+        </form>
+    </div>
+</div>
