--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,20 +1,41 @@
 <% layout("/layouts/boilerplate") -%>
 
-<body>
-    <h3>Edit your listing</h3>
-    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
-        <input name="listing[title]" value="<%=listing.title%>" " type="text">
-        <br> <br>
-        <textarea name="listing[description]" cols="50" rows="5" value="<%=listing.description%>" type="text"><%=listing.description%></textarea>
-        <br> <br>
-        <input name="listing[image]" value="<%=listing.image%>" type="url"> 
-        <br><br>
-        <input name="listing[price]" value="<%=listing.price%>" type="number"> 
-        <br><br>
-        <input name="listing[location]" value="<%=listing.location%>" type="text"> 
-        <br><br>
-        <input name="listing[country]" value="<%=listing.country%>" type="text">
-        <br><br>
-        <button>Edit</button>
-    </form>
-</body>
+    <div class="row mt-3">
+        <div class="col-8 offset-2">
+            <h3>Edit your listing</h3>
+            <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
+                <div class="mb-3">
+                    <label for="title" class="form-label">Title</label>
+                    <input name="listing[title]" value="<%=listing.title%>" type="text" class="form-control">
+
+                </div>
+                <div class="mb-3">
+                    <label for="description" class="form-label">Description</label>
+                    <textarea name="listing[description]" cols="50" rows="5" value="<%=listing.description%>"
+                        type="text" class="form-control"><%=listing.description%></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="image" class="form-label">Image URL/Link </label>
+                    <input name="listing[image]" value="<%=listing.image%>" type="url" class="form-control">
+                </div>
+                <div class="row">
+                    <div class="mb-3 col-md-4">
+                        <label for="price" class="form-label">Price</label>
+                        <input name="listing[price]" value="<%=listing.price%>" type="number" class="form-control">
+
+                    </div>
+                    <div class="mb-3 col-md-8">
+                        <label for="location" class="form-label">Location</label>
+                        <input name="listing[location]" value="<%=listing.location%>" type="text" class="form-control">
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="country" class="form-label">Country</label>
+                    <input name="listing[country]" value="<%=listing.country%>" type="text" class="form-control">
+                </div>
+
+                <button class="btn btn-dark edit-btn mt-3 mb-5">Edit</button>
+            </form>
+        </div>
+    </div>
