--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,73 +1,58 @@
 <% layout("/layouts/boilerplate") -%>
 
-<div class="row">
-    <div class="col-8 offset-2">
-        <br>
-    <h3>Create a new listing</h3> <br>
-        <form method="POST" action="/listings" novalidate class="needs-validation">
+    <div class="row">
+        <div class="col-8 offset-2">
+            <br>
+            <h3>Create a new listing</h3> <br>
+            <form method="POST" action="/listings" novalidate class="needs-validation">
 
-            <div class="mb-3">
-                <label for="title" class="form-label">Title</label>
-                <input name="listing[title]" 
-                        placeholder="enter title " 
-                        type="text"
-                        class="form-control"
-                        required
-                >
-            </div>
-            
-            <div class="mb-3">
-                <label for="description" class="form-label">Description</label>
-                <textarea name="listing[description]" 
-                    placeholder="enter description" 
-                    type="text"
-                    class="form-control"
-                    required
-                ></textarea>
-            </div>
-            <div class="mb-3">
-                <label for="image" class="form-label">Image URL</label>
-                <input name="listing[image]" 
-                    placeholder="enter URL/link" 
-                    type="url" 
-                    class="form-control"
-                    required>
-                    
-            </div>
-
-            <div class="row">
-                <div class="mb-3 col-md-4">
-                    <label for="price">Price</label>
-                    <input name="listing[price]" 
-                    placeholder="enter price" 
-                    type="number"
-                    class="form-control"
-                    required>
-                    
+                <div class="mb-3">
+                    <label for="title" class="form-label">Title</label>
+                    <input name="listing[title]" placeholder="enter title " type="text" class="form-control" required>
+                    <div class="valid-feedback">Looks good</div>
                 </div>
-                <div class="mb-3 col-md-8">
-                    <label for="location" class="form-label">Location</label>
-                    <input name="listing[location]" 
-                        placeholder="enter location" 
-                        type="text"
-                        class="form-control"
+
+                <div class="mb-3">
+                    <label for="description" class="form-label">Description</label>
+                    <textarea name="listing[description]" placeholder="enter description" type="text"
+                        class="form-control" required></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="image" class="form-label">Image URL</label>
+                    <input name="listing[image]" placeholder="enter URL/link" type="url" class="form-control">
+
+                </div>
+
+                <div class="row">
+                    <div class="mb-3 col-md-4">
+                        <label for="price">Price</label>
+                        <input name="listing[price]" placeholder="enter price" class="form-control"
+                            required>
+                        <div class="invalid-feedback">
+                            Please provide a valid price.
+                        </div>
+                    </div>
+                    <div class="mb-3 col-md-8">
+                        <label for="location" class="form-label">Location</label>
+                        <input name="listing[location]" placeholder="enter location" type="text" class="form-control"
+                            required>
+                        <div class="invalid-feedback">
+                            Please provide a valid city.
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <div class="mb-3">
+                    <label for="country" class="form-label">Country</label>
+                    <input name="listing[country]" placeholder="enter country" type="text" class="form-control"
                         required>
+
                 </div>
-            </div>
-
-            
-            <div class="mb-3">
-                <label for="country" class="form-label">Country</label>
-                <input name="listing[country]" 
-                placeholder="enter country" 
-                type="text"
-                class="form-control"
-                required>
-
-            </div>
-            <br><br>
-            <button class="btn btn-dark add-btn">Add</button>
-            <br><br>
-        </form>
+                <br><br>
+                <button class="btn btn-dark add-btn">Add</button>
+                <br><br>
+            </form>
+        </div>
     </div>
-</div>
