added a review form for taking review and rating in the show.ejs page

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,17 +1,55 @@
-<%layout("/layouts/boilerplate")%>
-<body>
-    <h3>Listing details: </h3>
-    <ul>
-        <li><%= listing.title %></li>
-        <li><%= listing.description %></li>
-        <li>&#8377 <%= listing.price.toLocaleString("en-IN") %></li>
-        <li><%= listing.location %></li>
-        <li><%= listing.country %></li> <br>
-    </ul>
-    <br>
-    <a href="/listings/<%= listing._id %>/edit">Edit listing</a> <br>
-    <br> <br>
-    <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-        <button>Delete listing</button>
-    </form>
-</body>
+<%layout("layouts/boilerplate")%>
+
+    <div class="row">
+        <div class="col-8 offset-3 show-card">
+            <h3>
+                <%= listing.title %>
+            </h3>
+        </div>
+
+        <div class="col-6 offset-3">
+            <div class="card" ">
+                <img src=" <%=listing.image%>" class="card-img-top show-img" alt="...">
+                <div class="card-body">
+                    <p class="card-text">
+                        <b>
+
+                        </b>
+                        <br>
+                        <%= listing.description %>
+                            <br>
+                            &#8377;<%= listing.price.toLocaleString("en-IN") %>
+                                <br>
+                                <%= listing.location %>
+                                    <br>
+                                    <%= listing.country %>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="btns">
+            <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-2 offset-3 edit-btn">Edit</a>
+            <br><br>
+            <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+                <button class="btn btn-dark offset-5">Delete</button>
+            </form>
+        </div>
+
+        <div class="col-8 offset-3 mb-3">
+            <hr>
+            <h4>Leave a review</h4>
+            <form>
+                <div class="mb-3 mt-3">
+                    <label for="rating">Rating</label>
+                    <input type="range" id="rating" class="form-range" name="review[rating]" min="1" max="5">
+                </div>
+
+                <div class="mb-3 mt-3">
+                    <label for="comment" class="form-label">Comment</label>
+                    <textarea name="review[comment]" class="form-control" id="comment"></textarea>
+                </div>
+                <button class="btn btn-outline-dark">Submit</button>
+            </form>
+        </div>
+    </div>
