added the cards for viewing the comments and ratings as well as a delete button

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -8,7 +8,7 @@
         </div>
 
         <div class="col-6 offset-3">
-            <div class="card" ">
+            <div class="listing-card">
                 <img src=" <%=listing.image%>" class="card-img-top show-img" alt="...">
                 <div class="card-body">
                     <p class="card-text">
@@ -39,7 +39,7 @@
         <div class="col-8 offset-3 mb-3">
             <hr>
             <h4>Leave a review</h4>
-            <form>
+            <form action="/listings/<%=listing._id %>/reviews" method="POST" novalidate class="needs-validation">
                 <div class="mb-3 mt-3">
                     <label for="rating">Rating</label>
                     <input type="range" id="rating" class="form-range" name="review[rating]" min="1" max="5">
@@ -47,9 +47,38 @@
 
                 <div class="mb-3 mt-3">
                     <label for="comment" class="form-label">Comment</label>
-                    <textarea name="review[comment]" class="form-control" id="comment"></textarea>
+                    <textarea name="review[comment]" class="form-control" id="comment" required></textarea>
+                    <div class="invalid-feedback">
+                        Please submit some comments for review
+                    </div>
                 </div>
                 <button class="btn btn-outline-dark">Submit</button>
             </form>
+
+            <hr>
+
+            <h4>All Reviews</h4>
+            <!-- <p><%= listing.reviews %></p> -->
+           
+                <div class="row">
+                    <% for(review of listing.reviews){ %>
+                        <div class="card col-5 mb-3 ms-3">
+                            <div class="card-body">
+                                <h5 class="card-title">Alice watson</h5>
+                                <p class="card-text">
+                                    <%= review.comment %>
+                                </p>
+                                <p class="card-text">
+                                    <%= review.rating %> stars
+                                </p>
+                            </div>
+
+                            <form method="POST" action="/listings/<%= listing._id%>/reviews/<%= review._id%>?_method=DELETE">
+                                <button class="btn btn-dark">Delete</button>
+                            </form>
+
+                        </div>
+                    <% } %>
+                </div>
         </div>
     </div>
